--- a/app/src/main/res/layout/log_in.xml
+++ b/app/src/main/res/layout/log_in.xml
@@ -12,11 +12,11 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:src="@drawable/carrot2"
-    android:contentDescription="Top Image"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    android:layout_marginTop="20dp" />
+        android:contentDescription="Top Image"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="20dp" />
 
     <TextView
         android:id="@+id/loginTitle"
@@ -28,9 +28,7 @@
         android:textColor="#000000"
         app:layout_constraintTop_toBottomOf="@+id/topImage"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="30dp"
-         />
-
+        android:layout_marginTop="30dp" />
 
     <TextView
         android:id="@+id/loginSubtitle"
@@ -41,9 +39,7 @@
         android:textColor="#808080"
         app:layout_constraintTop_toBottomOf="@id/loginTitle"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_margin="8dp"
         android:layout_marginTop="8dp"/>
-
 
     <EditText
         android:id="@+id/emailInput"
@@ -58,9 +54,7 @@
         app:layout_constraintTop_toBottomOf="@id/loginSubtitle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_margin="24dp"
         android:layout_marginTop="30dp"/>
-
 
     <EditText
         android:id="@+id/passwordInput"
@@ -75,9 +69,7 @@
         app:layout_constraintTop_toBottomOf="@id/emailInput"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_margin="16dp"
         android:layout_marginTop="30dp"/>
-
 
     <TextView
         android:id="@+id/forgotPassword"
@@ -89,8 +81,7 @@
         android:textStyle="italic"
         app:layout_constraintTop_toBottomOf="@id/passwordInput"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_margin="8dp" />
-
+        android:layout_marginTop="8dp" />
 
     <Button
         android:id="@+id/loginButton"
@@ -100,26 +91,23 @@
         android:textColor="#FFFFFF"
         android:textStyle="bold"
         android:backgroundTint="#00C853"
-    android:padding="12dp"
+        android:padding="12dp"
         android:textAllCaps="false"
-    app:layout_constraintTop_toBottomOf="@id/forgotPassword"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintTop_margin="24dp"
+        app:layout_constraintTop_toBottomOf="@id/forgotPassword"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="78dp"/>
-
 
     <TextView
         android:id="@+id/signupPrompt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Don’t have an account? Sign Up"
+        android:text="Don't have an account? Sign Up"
         android:textSize="14sp"
         android:textColor="#000000"
         app:layout_constraintTop_toBottomOf="@id/loginButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_margin="16dp"
         android:layout_marginTop="8dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
