--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -28,9 +28,7 @@
         android:textColor="#000000"
         app:layout_constraintTop_toBottomOf="@+id/topImage"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="30dp"
-        />
-
+        android:layout_marginTop="30dp" />
 
     <TextView
         android:id="@+id/loginSubtitle"
@@ -41,7 +39,6 @@
         android:textColor="#808080"
         app:layout_constraintTop_toBottomOf="@id/loginTitle"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_margin="8dp"
         android:layout_marginTop="8dp"/>
 
     <EditText
@@ -57,7 +54,6 @@
         app:layout_constraintTop_toBottomOf="@id/loginSubtitle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_margin="24dp"
         android:layout_marginTop="30dp"/>
 
     <EditText
@@ -73,9 +69,7 @@
         app:layout_constraintTop_toBottomOf="@id/userInput"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_margin="24dp"
         android:layout_marginTop="30dp"/>
-
 
     <EditText
         android:id="@+id/passwordInput"
@@ -90,9 +84,7 @@
         app:layout_constraintTop_toBottomOf="@id/emailInput"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_margin="16dp"
         android:layout_marginTop="30dp"/>
-
 
     <TextView
         android:id="@+id/forgotPassword"
@@ -104,7 +96,7 @@
         android:textStyle="italic"
         app:layout_constraintTop_toBottomOf="@id/passwordInput"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_margin="8dp" />
+        android:layout_marginTop="8dp" />
 
     <TextView
         android:id="@+id/signupPrompt"
@@ -116,7 +108,6 @@
         app:layout_constraintTop_toBottomOf="@id/forgotPassword"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_margin="16dp"
         android:layout_marginTop="88dp"/>
 
     <Button
@@ -132,10 +123,6 @@
         app:layout_constraintTop_toBottomOf="@id/signupPrompt"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_margin="24dp"
         android:layout_marginTop="8dp"/>
-
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
