--- a/app/src/main/res/layout/signin.xml
+++ b/app/src/main/res/layout/signin.xml
@@ -5,18 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
     <ImageView
         android:id="@+id/bg"
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:scaleType="centerCrop"
         android:src="@drawable/bg"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-     />
-
+        android:contentDescription="Background Image"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/Text1"
@@ -42,7 +40,6 @@
         android:padding="16dp"
         android:textColor="#000000"
         app:layout_constraintTop_toBottomOf="@+id/Text1"
-        app:layout_constraintTop_margin="100dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="32dp"
@@ -61,38 +58,36 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-
     <Button
         android:id="@+id/googleButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Continue with Google"
-
+        android:textAllCaps="false"
         android:background="#1E90FF"
         android:textColor="#FFFFFF"
-    android:padding="12dp"
-    android:layout_marginTop="16dp"
-    app:layout_constraintTop_toBottomOf="@id/text2"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.5"
-    app:layout_constraintWidth_percent="0.8" />
-
+        android:padding="12dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/text2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintWidth_percent="0.8" />
 
     <Button
         android:id="@+id/facebookButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Continue with Facebook"
+        android:textAllCaps="false"
         android:backgroundTint="#3b5998"
-    android:textColor="#FFFFFF"
-    android:padding="12dp"
-    android:layout_marginTop="16dp"
-    app:layout_constraintTop_toBottomOf="@id/googleButton"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.5"
-    app:layout_constraintWidth_percent="0.8" />
-
+        android:textColor="#FFFFFF"
+        android:padding="12dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/googleButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintWidth_percent="0.8" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
