--- a/app/src/main/res/layout/verification.xml
+++ b/app/src/main/res/layout/verification.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF">
 
-
     <TextView
         android:id="@+id/headerText"
         android:layout_width="wrap_content"
@@ -17,7 +16,6 @@
         android:textColor="#000000"
         android:layout_marginTop="60dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintTop_margin="48dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -34,18 +32,16 @@
         app:layout_constraintTop_toBottomOf="@+id/headerText"
         android:layout_margin="24dp" />
 
-
-
     <ImageButton
         android:id="@+id/nextButton"
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:background="@drawable/btn2"
+        android:contentDescription="Next Button"
         app:layout_constraintBottom_toTopOf="@id/keypadGrid"
-        app:layout_constraintBottom_margin="16dp"
+        android:layout_marginBottom="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintEnd_margin="32dp" />
-
+        android:layout_marginEnd="32dp" />
 
     <GridLayout
         android:id="@+id/keypadGrid"
