--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,4 @@
     <item name="android:textColor">#000000</item>
     <item name="android:padding">12dp</item>
 </style>
-</resources>>
+</resources>
